2002-11-01  Jody Goldberg <jody@gnome.org>

	* Release 1.1.11

2002-10-27  Jody Goldberg <jody@gnome.org>

	* Release 1.1.10

2002-10-24  Jody Goldberg <jody@gnome.org>

	* openoffice-read.c (oo_style_prop) : fix handling of vertical
	  alignment..

2002-10-23  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=96595
	* openoffice-read.c (oo_covered_cell_start) : new.
	(oo_covered_cell_end) : new.  covered cells, and repeated convered
	  cells take up space.
	(oo_cell_end) : a repeated cell with content replicates the content.
	(oo_cell_start) : a repeated cell with a style replicates the style.

2002-10-09  Morten Welinder  <terra@diku.dk>

	* openoffice-read.c (OOParseState): Avoid "gboolean ... : 1".

2002-10-08  Jody Goldberg <jody@gnome.org>

	* openoffice-read.c (oo_style) : correctly layer parent styles but
	  lose the relationship because we have no similar structure.
	  Put the frame work in place to start supporting number formats but
	  do not implement it yet.

2002-10-08  Jody Goldberg <jody@gnome.org>

	* openoffice-read.c (oo_named_expr) : support named expressions.
	(oo_cell_start) : support merged ranges.

2002-10-07  Jody Goldberg <jody@gnome.org>

	* openoffice-read.c (oo_table_start) : fix accidental offset of 1,1.

2002-10-02  Jody Goldberg <jody@gnome.org>

	* openoffice-read.c : Ensure that the sheet ordering is correct.

2002-10-01  Jody Goldberg <jody@gnome.org>

	* openoffice-read.c (oo_attr_enum) : new.
	(oo_style_prop) : some initial work.

2002-09-30  Jody Goldberg <jody@gnome.org>

	* Release 1.1.9

2002-09-29  Jody Goldberg <jody@gnome.org>

	* openoffice-read.c (oo_cell_start) : handle array expressions,
	  and saved booleans, numbers, and strings (errors handled elsewhere)
	  TODO : dates
	(xml_sax_attr_bool) : use oo_warning
	(xml_sax_attr_int) : use oo_warning
	(xml_sax_attr_float) : use oo_warning

2002-09-29  Jody Goldberg <jody@gnome.org>

	* openoffice-read.c (oo_warning) : new utility.