@@ -1,5 +1,9 @@
 2002-11-02  J.H.M. Dassen (Ray) <jdassen@debian.org>
 
+	* api.c: Made lots of functions static.
+
+2002-11-02  J.H.M. Dassen (Ray) <jdassen@debian.org>
+
 	* reports-write.c: Don't use // comments.
 
 2002-11-01  Jody Goldberg <jody@gnome.org>
