@@ -1,3 +1,7 @@
+2002-11-02  J.H.M. Dassen (Ray) <jdassen@debian.org>
+
+	* openoffice-read.c (openoffice_file_open): Made static.
+
 2002-11-01  Jody Goldberg <jody@gnome.org>
 
 	* Release 1.1.11
